--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test_mynpmpackage",
+  "name": "test_my_first_aqs_npmpackage",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
